--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,1 @@
-# Configurações do banco de dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/agenda
-spring.datasource.username=postgres
-spring.datasource.password=ronaldokit23
-
-# Configurações adicionais (opcional)
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# spring.jpa.hibernate.ddl-auto=create
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.show-sql=true
-
-springdoc.swagger-ui.path=/swagger-ui.html
+spring.profiles.active=dev
